--- a/home.html
+++ b/home.html
@@ -6,25 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-            <link rel="shortcut icon" href="S1.jpg" type="image/x-icon">
+            <link rel="shortcut icon" href="S6.jpg" type="image/x-icon">
 
     <title>WRITING</title>
 </head>
 <body>
     <style>
-    .navbar {
-        width: 100%;
-        background-color: #130808;
-        overflow: auto;
-        position: fixed;
-      }
-      .navbar a {
-  float: left;
-  text-align: center;
-  padding: 2px;
-  color: white;
-  text-decoration: none;
-}
+    
 
    </style>
    <div class="navbar">
@@ -38,7 +26,7 @@
         </ul>
    </div><br><br>
         <header>
-    <img src="S1.jpg" width="300" height="388">
+    <img src="S5.jpeg" width="300" height="388">
         <h2>SYLVIA WAWERU</h2>
 
     <h1>Content, Creative & Academic <br>Writer</h1>
