--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
 
     <h1>Content, Creative & Academic <br>Writer</h1>
     <h4>Hi, I'm Sylvia. I write blog posts and long-form content that help  companies<br> 
-        get more traffic and leads all over the country.I'm also proficient <br>in academic writing and thech writing
+        get more traffic and leads all over the world.I'm also proficient <br>in academic writing and tech writing
         too.</h4>
 </header><br>
 <a name="home"></a>
