--- a/home.html
+++ b/home.html
@@ -95,8 +95,9 @@
                 <li><a href="https://web.whatsapp.com/" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
                 <li><a href="https://twitter.com/settings/account?lang=en" target="_blank"><i class="fab fa-twitter"></i></a></li>
             </ul>
-            <p>&#169; 2023 copyright all rights reserved.</p>
-       
+            <p id="current-year"></p>       
         </footer>
+        <script src="home.js"></script>
+
 </body>
 </html>
